@@ -88,7 +88,7 @@ class TXYZParser(TopologyReaderBase):
             #header
             natoms = int(inf.readline().split()[0])
 
-            atomids = np.zeros(natoms, dtype=np.int)
+            atomids = np.zeros(natoms, dtype=int)
             names = np.zeros(natoms, dtype=object)
             types = np.zeros(natoms, dtype=object)
             bonds = []
