@@ -4,7 +4,12 @@ universal = 1
 # "encountered in " Runtimewarnings come from numpy for unit cell conversions.
 # They should be activated again once we fixed the occurrence in the code.
 [tool:pytest]
-filterwarnings= always
+filterwarnings=
+    always
+    error:`np.*` is a deprecated alias for the builtin:DeprecationWarning
+    # don't enforce for third party packages though:
+    ignore:`np.*` is a deprecated alias for the builtin:DeprecationWarning:networkx.*:
+    error:Creating an ndarray from ragged nested sequences
 
 # Settings to test for warnings we throw
 # [tool:pytest]
